Kubernetes/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentripplanner
  labels:
    name: opentripplanner
