Kubernetes/CoreDNS.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coredns
  namespace: opentripplanner
  labels:
    k8s-app: coredns
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: coredns
  template:
    metadata:
      labels:
        k8s-app: coredns
    spec:
      serviceAccountName: coredns
      containers:
        - name: coredns
          image: coredns/coredns:1.12.0
          ports:
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
                 
          volumeMounts:
            - name: config-volume
              mountPath: /etc/coredns
      volumes:
        - name: config-volume
          configMap:
            name: coredns

---
apiVersion: v1
kind: Service
metadata:
  name: kube-dns
  namespace: opentripplanner
  labels:
    k8s-app: coredns
spec:
  selector:
    k8s-app: coredns
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
  clusterIP: 10.43.0.10
